--- a/ReHouse.FrontEnd/Views/Shared/_Layout.cshtml
+++ b/ReHouse.FrontEnd/Views/Shared/_Layout.cshtml
@@ -8,6 +8,17 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <!-- Google Tag Manager -->
+    <script>
+        (function (w, d, s, l, i) {
+            w[l] = w[l] || []; w[l].push({
+                'gtm.start':
+                new Date().getTime(), event: 'gtm.js'
+            }); var f = d.getElementsByTagName(s)[0],
+            j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
+            'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
+        })(window, document, 'script', 'dataLayer', 'GTM-PRPTPN5');</script>
+    <!-- End Google Tag Manager -->
     <link rel="shortcut icon" type="image/jpg" href="~/Content/images/rehousemin.jpg">
     <meta charset="utf-8">
     <meta http-equiv="~/Content-Type" content="text/html; charset=utf-8">
@@ -40,7 +51,7 @@
 
     @if (!String.IsNullOrEmpty(ViewBag.CanonicalUrl))
     {
-        <link rel="canonical" href="@ViewBag.CanonicalUrl"/>
+        <link rel="canonical" href="@ViewBag.CanonicalUrl" />
     }
 
     @if (!String.IsNullOrEmpty(ViewBag.Image))
@@ -51,9 +62,15 @@
     }
     @Styles.Render("~/Content/styleCss")
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="~/Content/mobile.min.css">    
+    <link rel="stylesheet" href="~/Content/mobile.min.css">
 </head>
 <body>
+    <!-- Google Tag Manager (noscript) -->
+    <noscript>
+        <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PRPTPN5"
+                height="0" width="0" style="display:none;visibility:hidden"></iframe>
+    </noscript>
+    <!-- End Google Tag Manager (noscript) -->
     <div class="header">
         <div class="container" id="container">
             <span class="flex_header">
