--- a/ReHouse.FrontEnd/Views/Shared/_Layout.cshtml
+++ b/ReHouse.FrontEnd/Views/Shared/_Layout.cshtml
@@ -404,7 +404,7 @@
             });
         });
     </script>
-    <script>
+    @*<script>
         (function (i, s, o, g, r, a, m) {
             i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
                 (i[r].q = i[r].q || []).push(arguments)
@@ -415,6 +415,6 @@
         ga('create', 'UA-100514743-1', 'auto');
         ga('send', 'pageview');
 
-    </script>
+    </script>*@
 </body>
 </html>
