--- a/ReHouse.FrontEnd/Views/Shared/_LayoutAdverts.cshtml
+++ b/ReHouse.FrontEnd/Views/Shared/_LayoutAdverts.cshtml
@@ -474,7 +474,8 @@
             $('#text_' + id).fadeOut();
             $('#textHidden_' + id).fadeIn();
         }
-
+    </script>
+    @*<script>
         (function (i, s, o, g, r, a, m) {
             i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
                 (i[r].q = i[r].q || []).push(arguments)
@@ -484,7 +485,7 @@
 
         ga('create', 'UA-100514743-1', 'auto');
         ga('send', 'pageview');
+    </script>*@
 
-    </script>
 </body>
 </html>
