--- a/ReHouse.FrontEnd/Views/Shared/_Layout.cshtml
+++ b/ReHouse.FrontEnd/Views/Shared/_Layout.cshtml
@@ -182,10 +182,18 @@
             
             <a class="video" href="http://www.youtube.com/watch?v=P0G_2tiivxE" data-autovideo="1">
                 <b data-src="Content/images/image-slider-1.jpg"></b>
+                <div class="inslider"><p>text text text</p></div>
             </a>
-            <a class="lazyImage" href="~/Content/images/image-slider-2.jpg"><img src="~/Content/images/image-slider-2.jpg"></a>
-            <a class="lazyImage" href="~/Content/images/image-slider-3.jpg"><img src="~/Content/images/image-slider-3.jpg"></a>
-            <a class="lazyImage" href="~/Content/images/image-slider-5.jpg"><img src="~/Content/images/image-slider-5.jpg"></a>
+            <a class="lazyImage" href="~/Content/images/image-slider-2.jpg">
+                <div class="inslider"><p>text text text</p></div>
+            </a>
+            <a class="video" href="http://www.youtube.com/watch?v=P0G_2tiivxE" data-autovideo="1">
+                <b data-src="Content/images/image-slider-1.jpg"></b>
+                <div class="inslider"><p>text text text</p></div>
+            </a>
+            <a class="lazyImage" href="~/Content/images/image-slider-5.jpg">
+                <div class="inslider"><p>text text text</p></div>
+            </a>
 
            </div>
     </div>
