--- a/ReHouse.FrontEnd/Views/Shared/_Layout.cshtml
+++ b/ReHouse.FrontEnd/Views/Shared/_Layout.cshtml
@@ -182,21 +182,55 @@
             
             <a class="video" href="http://www.youtube.com/watch?v=P0G_2tiivxE" data-autovideo="1">
                 <b data-src="Content/images/image-slider-1.jpg"></b>
-                <div class="inslider"><p>text text text</p></div>
+                <div class="inslider">
+                    <h3>27 жемчужина</h3>
+                    <h4>на каманина</h4>
+                    <h5>срок сдачи 3 квартал 2017</h5>
+                    <p>1 комн. квартра <span>28600$</span></p>
+                    <p>1 комн. квартра <span>28600$</span></p>
+                    <p>1 комн. квартра <span>28600$</span></p>
+                    <button>Подробнее</button>
+                </div>
             </a>
+            
             <a class="lazyImage" href="~/Content/images/image-slider-2.jpg">
-                <div class="inslider"><p>text text text</p></div>
-            </a>
-            <a class="video" href="http://www.youtube.com/watch?v=P0G_2tiivxE" data-autovideo="1">
-                <b data-src="Content/images/image-slider-1.jpg"></b>
-                <div class="inslider"><p>text text text</p></div>
-            </a>
-            <a class="lazyImage" href="~/Content/images/image-slider-5.jpg">
-                <div class="inslider"><p>text text text</p></div>
-            </a>
+                <div class="inslider">
+                      <h3>27 жемчужина</h3>
+                    <h3>27 жемчужина</h3>
+                    <h4></h4>
+                    <h5>срок сдачи 3 квартал 2017</h5>
+                    <p>1 комн. квартра <span>28600$</span></p>
+                        <span></span></p>
+                        <p>1 комн. квартра <span>28600$</span></p>
+                        <p>1 комн. квартра <span>28600$</span></p>
+                        <button>Подробнее</button>
+                    </div>
+                </a>
+            
+            <img src="~/Content/images/image-slider-2.jpg">
+            
 
            </div>
     </div>
+
+
+
+    <!--<a class="lazyImage" href="~/Content/images/image-slider-2.jpg">
+                <div class="inslider">
+                    <h3>27 жемчужина</h3>
+                    <h4>на каманина</h4>
+                    <h5>срок сдачи 3 квартал 2017</h5>
+                    <p>1 комн. квартра <span>28600$</span></p>
+                    <p>1 комн. квартра <span>28600$</span></p>
+                    <p>1 комн. квартра <span>28600$</span></p>
+                    <button>Подробнее</button>
+                </div>
+            </a>-->
+
+
+
+
+
 
 
 
