--- a/ReHouse.FrontEnd/Scripts/js-image-slider.css
+++ b/ReHouse.FrontEnd/Scripts/js-image-slider.css
@@ -78,5 +78,6 @@
     transform: translate3d(0,0,0);             
     -webkit-backface-visibility: hidden;
     backface-visibility: hidden;
+    display: block!important;
 }
 
