--- a/ReHouse.FrontEnd/Views/Shared/_Layout.cshtml
+++ b/ReHouse.FrontEnd/Views/Shared/_Layout.cshtml
@@ -193,21 +193,29 @@
                 </div>
             </a>
             
-            <a class="lazyImage" href="~/Content/images/image-slider-2.jpg">
+            <!--<a class="lazyImage" href="~/Content/images/image-slider-2.jpg">
                 <div class="inslider">
-                      <h3>27 жемчужина</h3>
                     <h3>27 жемчужина</h3>
-                    <h4></h4>
+                    <h4>на каманина</h4>
                     <h5>срок сдачи 3 квартал 2017</h5>
                     <p>1 комн. квартра <span>28600$</span></p>
-                        <span></span></p>
-                        <p>1 комн. квартра <span>28600$</span></p>
-                        <p>1 комн. квартра <span>28600$</span></p>
-                        <button>Подробнее</button>
-                    </div>
-                </a>
+                    <p>1 комн. квартра <span>28600$</span></p>
+                    <p>1 комн. квартра <span>28600$</span></p>
+                    <button>Подробнее</button>
+                </div>
+                </a>-->
             
-            <img src="~/Content/images/image-slider-2.jpg">
+         <div style="display:block!important;"><img src="~/Content/images/image-slider-2.jpg">
+            <div class="inslider">
+                <h3>27 жемчужина</h3>
+                <h4>на каманина</h4>
+                <h5>срок сдачи 3 квартал 2017</h5>
+                <p>1 комн. квартра <span>2800$</span></p>
+                <p>1 комн. квартра <span>2600$</span></p>
+                <p>1 комн. квартра <span>2860$</span></p>
+                <button>Подробнее</button>
+            </div>
+            </div>
             
 
            </div>
