--- a/ReHouse.FrontEnd/Views/Shared/_Layout.cshtml
+++ b/ReHouse.FrontEnd/Views/Shared/_Layout.cshtml
@@ -215,8 +215,34 @@
                 <p>1 комн. квартра <span>2860$</span></p>
                 <button>Подробнее</button>
             </div>
-            </div>
+          </div>
+
+            <a class="video" href="http://www.youtube.com/watch?v=P0G_2tiivxE" data-autovideo="1">
+                <b data-src="Content/images/image-slider-1.jpg"></b>
+                <div class="inslider">
+                    <h3>27 жемчужина</h3>
+                    <h4>на каманина</h4>
+                    <h5>срок сдачи 3 квартал 2017</h5>
+                    <p>1 комн. квартра <span>28600$</span></p>
+                    <p>1 комн. квартра <span>28600$</span></p>
+                    <p>1 комн. квартра <span>28600$</span></p>
+                    <button>Подробнее</button>
+                </div>
+            </a>
             
+
+            <div style="display:block!important;">
+                <img src="~/Content/images/image-slider-2.jpg">
+                <div class="inslider">
+                    <h3>27 жемчужина</h3>
+                    <h4>на каманина</h4>
+                    <h5>срок сдачи 3 квартал 2017</h5>
+                    <p>1 комн. квартра <span>2800$</span></p>
+                    <p>1 комн. квартра <span>2600$</span></p>
+                    <p>1 комн. квартра <span>2860$</span></p>
+                    <button>Подробнее</button>
+                </div>
+            </div>
 
            </div>
     </div>
