--- a/ReHouse.FrontEnd/Scripts/js-image-slider.css
+++ b/ReHouse.FrontEnd/Scripts/js-image-slider.css
@@ -36,11 +36,14 @@
 
 /* ------ built-in navigation bullets wrapper ------*/
 #slider .navBulletsWrapper  {
-    top:670px;
-    text-align:center;
-    background:none;
-    position:relative;
-    z-index:3;
+    top: 667px;
+    /* text-align: center; */
+    background: none;
+    position: absolute;
+    z-index: 3;
+    display: flex!important;
+    left: 50%;
+    margin-left: -46px;
 }
 
 /* each bullet */
@@ -80,4 +83,6 @@
     backface-visibility: hidden;
     display: block!important;
 }
-
+/*#slider .mcSlc {
+    background:none!important;
+}*/
