--- a/ReHouse.FrontEnd/Content/style.css
+++ b/ReHouse.FrontEnd/Content/style.css
@@ -898,6 +898,7 @@ opacity: .1;}}
         font-size: 30px;
         font-weight: 700;
         text-transform:uppercase;
+        margin-left: 4px;
     }
     .d-carousel h2 span {
         color: #f9a320;
@@ -1573,6 +1574,7 @@ opacity: .1;}}
     font-size: 30px;
     font-weight: 700;
     text-transform: uppercase;
+    margin-left: 6px;
 }
 
 .h2prodsale h2 {
@@ -2028,7 +2030,7 @@ opacity: .1;}}
     -ms-flex-direction: row;
     flex-direction: row;
     -ms-flex-wrap: wrap;
-    /* flex-wrap: wrap; */
+    flex-wrap: wrap; 
     -webkit-box-align: start;
     -ms-flex-align: start;
     align-items: flex-start;
@@ -2042,7 +2044,7 @@ opacity: .1;}}
 .sorting a {
     display: block;
     padding: 10px 0;
-    width: 350px;
+    width: 348px;
     background: transparent;
     margin-top: 4px;
     margin-left: 2px;
@@ -2624,49 +2626,42 @@ opacity: .1;}}
 .about_company {
     padding-top: 20px;
     padding-bottom: 20px;
-    margin-left: 85px;
     margin-bottom: 20px;
     text-align: justify;
-    width: 1332px;
+    width: 1200px;
 }
 
 .about_company1 {
     padding-top: 20px;
     padding-bottom: 20px;
-    margin-left: 225px;
     margin-bottom: 20px;
     text-align: justify;
-    width: 1332px;
+    width: 1200px;
 }
 
 .about_company p {
-    color: #fff;
-    line-height: 22px;
-    font-size: 18px;
-    font-family: "Century Gothic";
-    font-family: "Century Gothic",CenturyGothic,AppleGothic,sans-serif;
-    font-weight: bold;
+
+    color: #114a82;
+    font-family: "ProximaNova";
+    font-size: 16px;
+    font-weight: 600;
+    line-height: 20px;
+    text-align: left;
+    padding:7px;
 }
 
-.about_company h2 {
-    margin-top: 35px;
-    margin-bottom: 9px;
-    color: #fff;
-    font-family: "Century Gothic";
-    font-family: "Century Gothic",CenturyGothic,AppleGothic,sans-serif;
-    font-size: 24px;
-    font-weight: 700;
-    text-transform: uppercase;
-}
+
 
 #map_company {
+    margin:auto;
     margin-bottom: 60px;
-    margin-left: 225px;
 }
-
+#map_company iframe {
+    margin:auto;
+}
 .photo_company {
     width: 821px;
-    margin-left: 340.5px;
+    margin:auto;
     margin-bottom: 10px;
     display: -webkit-box;
     display: -ms-flexbox;
@@ -3023,11 +3018,15 @@ a[href^=tel] {
 .seotext a#more {
     color: #f9a320;
     font-family: "ProximaNova";
-    font-size: 16px;
+    font-size: 19px;
     font-weight: 600;
     line-height: 20px;
     text-align: justify;
+    padding-left: 15px;
 }
+
+
+
 
 .selection1 {
     display: -webkit-box;
@@ -3041,54 +3040,56 @@ a[href^=tel] {
     -webkit-box-pack: justify;
     -ms-flex-pack: justify;
     justify-content: space-between;
-    margin-top: 32px;
-    margin-left: 225px;
+    margin-left: 5px;
     flex-wrap: wrap;
+        margin-top: 32px;
 }
 
-    .selection1 select {
-        width: 199px;
-        height: 51px;
-        -moz-appearance: none;
-        appearance: none;
-        -webkit-appearance: none;
-        background: transparent;
-        background: url(images/select.png) no-repeat right;
-        color: #fff;
-        font-family: "Century Gothic";
-        font-size: 15px;
-        font-weight: 700;
-        border-bottom: 1px solid #fff;
-        border-left: 1px solid #fff;
-        border-top: 1px solid #fff;
-        padding-left: 5px;
-        margin-bottom: 5px;
-    }
+.h2novostroy1 h2 {
 
-    .selection1 ._cost select {
-        width: 120px;
-    }
+    margin-top: 35px;
+    margin-bottom: 9px;
+    color: #114a82;
+    font-family: "ProximaNova";
+    font-size: 30px;
+    font-weight: 700;
+    text-transform: uppercase;
+    margin-left: 6px;
+}
 
-    .selection1 select option {
-        background-color: #163d7d;
-        color: #fff;
-        font-family: "Century Gothic";
-        font-size: 14px;
-        font-weight: 700;
-        text-transform: none;
-    }
+.selection1 select {
+    width: 199px;
+    height: 51px;
+    -moz-appearance: none;
+    appearance: none;
+    -webkit-appearance: none;
+    background: transparent;
+    background: url(images/select.png) no-repeat 96%;
+    color: #114a82;
+    font-family: "ProximaNova";
+    font-size: 15px;
+    font-weight: 700;
+    border-bottom: 1.2px solid #114a82;
+    border-left: 1.2px solid #114a82;
+    border-top: 1.2px solid #114a82;
+    border-right: 1.2px solid #114a82;
+    padding-left: 5px;
+    margin-bottom: 5px;
+}
 
-    .selection1 select:focus {
-        color: #ffd700;
-        background: url(images/select_hover.png) no-repeat right;
-    }
+.selection1 ._cost select {
+    width: 120px;
+}
 
-    .selection1 select:hover {
-        color: #ffd700;
-        background: url(images/select_hover.png) no-repeat right;
-        -webkit-transition: .5s ease;
-        transition: .5s ease;
-    }
+.selection1 select option {
+    background-color: #f3f3f9;
+    color: #114a82;
+    font-family: "ProximaNova";
+    font-size: 14px;
+    font-weight: 700;
+    text-transform: none;
+    border:none;
+}
 
 body a, p, button {
     -moz-text-size-adjust: 100%;
