--- a/ReHouse.FrontEnd/Views/Home/About.cshtml
+++ b/ReHouse.FrontEnd/Views/Home/About.cshtml
@@ -11,34 +11,38 @@
         });
     </script>
 }
+</div>
 <div class="navigation_string">
-    <div class="way">
-        <a href="/">Главная</a>
-        <pre> </pre>
-        <p>/</p>
-        <pre> </pre>
-        <a href="/home/about/">О компании</a>
+    <div class="container">
+        <div class="way">
+            <a href="/">Главная</a>
+            <pre> </pre>
+            <a>/</a>
+            <pre> </pre>
+            <a href="/home/about/">О компании</a>
+        </div>
+        </div>
     </div>
-</div>
-<div class="about_company">
-    @if (texts != null)
-    {
-        var main = texts.FirstOrDefault(x => x.TextBlockName == "Main");
-        if (main != null)
+<div class="container">
+    <div class="about_company">
+        @if (texts != null)
         {
-            <h2>@main.Title</h2>
-            <p>@Html.Raw(main.Description)</p>
+            var main = texts.FirstOrDefault(x => x.TextBlockName == "Main");
+            if (main != null)
+            {
+                <div class="h2novostroy"><h2><span>Продажа квартир</span> в Одессе</h2></div>
+                <p>@Html.Raw(main.Description)</p>
+            }
         }
-    }
-</div>
-<div class="photo_company">
-    <a class="plan" rel="group" title="Наша команда" href="~/content/images/rehouse10.jpeg"><img src="~/content/images/rehouse10.jpeg?w=400&h=600&mode=max" border="0" width="400" height="600" /></a>
-    <a class="plan" rel="group" title="Наш директор филиала" href="~/content/images/rehouse11.jpeg"><img src="~/content/images/rehouse11.jpeg?w=400&h=600&mode=max" border="0" width="400" height="600" /></a>
-</div>
-<div id="map_company">
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d687.1583056346718!2d30.748138929248427!3d46.45596399869532!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40c633d959ebd873%3A0xc31a18fbc02e9908!2z0L_RgNC-0YHQv9C10LrRgiDQk9Cw0LPQsNGA0ZbQvdCwLCA2LzUsINCe0LTQtdGB0LAsINCe0LTQtdGB0YzQutCwINC-0LHQu9Cw0YHRgtGMLCDQo9C60YDQsNGX0L3QsA!5e0!3m2!1suk!2sru!4v1492596754853" width="1065" height="495" frameborder="0" style="border:0" allowfullscreen></iframe>
-</div>
-<div id="mapnovostroy1">
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d687.1583056346718!2d30.748138929248427!3d46.45596399869532!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40c633d959ebd873%3A0xc31a18fbc02e9908!2z0L_RgNC-0YHQv9C10LrRgiDQk9Cw0LPQsNGA0ZbQvdCwLCA2LzUsINCe0LTQtdGB0LAsINCe0LTQtdGB0YzQutCwINC-0LHQu9Cw0YHRgtGMLCDQo9C60YDQsNGX0L3QsA!5e0!3m2!1suk!2sru!4v1492596754853" width="700px" height="350px" frameborder="0" style="border:0" allowfullscreen></iframe>
-</div>
+    </div>
+    <div class="photo_company">
+        <a class="plan" rel="group" title="Наша команда" href="~/content/images/rehouse10.jpeg"><img src="~/content/images/rehouse10.jpeg?w=400&h=600&mode=max" border="0" width="400" height="600" /></a>
+        <a class="plan" rel="group" title="Наш директор филиала" href="~/content/images/rehouse11.jpeg"><img src="~/content/images/rehouse11.jpeg?w=400&h=600&mode=max" border="0" width="400" height="600" /></a>
+    </div>
+    <div id="map_company">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d687.1583056346718!2d30.748138929248427!3d46.45596399869532!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40c633d959ebd873%3A0xc31a18fbc02e9908!2z0L_RgNC-0YHQv9C10LrRgiDQk9Cw0LPQsNGA0ZbQvdCwLCA2LzUsINCe0LTQtdGB0LAsINCe0LTQtdGB0YzQutCwINC-0LHQu9Cw0YHRgtGMLCDQo9C60YDQsNGX0L3QsA!5e0!3m2!1suk!2sru!4v1492596754853" width="1200" height="495" frameborder="0" style="border:0" allowfullscreen></iframe>
+    </div>
+    <div id="mapnovostroy1">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d687.1583056346718!2d30.748138929248427!3d46.45596399869532!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40c633d959ebd873%3A0xc31a18fbc02e9908!2z0L_RgNC-0YHQv9C10LrRgiDQk9Cw0LPQsNGA0ZbQvdCwLCA2LzUsINCe0LTQtdGB0LAsINCe0LTQtdGB0YzQutCwINC-0LHQu9Cw0YHRgtGMLCDQo9C60YDQsNGX0L3QsA!5e0!3m2!1suk!2sru!4v1492596754853" width="700px" height="350px" frameborder="0" style="border:0" allowfullscreen></iframe>
+    </div>
 
