--- a/ReHouse.FrontEnd/Views/Vacancy/Index.cshtml
+++ b/ReHouse.FrontEnd/Views/Vacancy/Index.cshtml
@@ -16,7 +16,7 @@
 <div class="container">
     
     <div class="about_company">
-        <h2>Наши вакансии</h2>
+        <div class="h2novostroy"><h2><span>Наши</span> вакансии</h2></div>
 
         @Html.Partial("Vacancy/_listOfVacancies", Model)
 
