--- a/ReHouse.FrontEnd/Views/Map/Index.cshtml
+++ b/ReHouse.FrontEnd/Views/Map/Index.cshtml
@@ -1,48 +1,52 @@
 ﻿@using ReHouse.FrontEnd.Models
 @*@model LoadCartModel*@
 
+</div>
 <div class="navigation_string">
-    <div class="way">
-        <a href="/">Главная</a>
-        <pre> </pre>
-        <p>/</p>
-        <pre> </pre>
-        <a href="/map/">Карта сайта</a>
+    <div class="container">
+        <div class="way">
+            <a href="/">Главная</a>
+            <pre> </pre>
+            <a>/</a>
+            <pre> </pre>
+            <a href="/map/">Карта сайта</a>
+        </div>
     </div>
 </div>
-<div class="h2novostroy"><h2>Карта сайта <span>REHOUSE</span></h2></div>
-<div class="map_website">
-    <ol type="1">
-        <li><a href="/">1. Главная</a></li>
-        <li>
-            <a>2. Продажа</a>
-            <ul>
-                <li><a href="/sale/fla/t">- Купить квартиру</a></li>
-                <li><a href="/sale/house/">- Купить дом</a></li>
-                <li><a href="/sale/homestead/">- Купить участок</a></li>
-                <li><a href="/sale/commerce/">- Купить коммерцию</a></li>
-            </ul>
-        </li>
-        <li>
-            <a>3. Аренда</a>
-            <ul>
-                <li><a href="/rent/flat/">- Снять квартиру</a></li>
-                <li><a href="/rent/house/">- Снять дом</a></li>
-                <li><a href="/rent/commerce/">- Снять коммерцию</a></li>
-                <li>@*<a href="/rent/homestead/">- Снять участок</a>*@</li>
-            </ul>
-        </li>
-        <li><a href="/newbuilding/">4. Новострои</a></li>
-        <li><a href="/manager/">5. Менеджеры</a></li>
-        <li>
-            <a>6. О нас</a>
-            <ul>
-                <li><a href="/home/about/">- О компании</a></li>
-                <li><a href="/vacancy/">- Вакансии агентства</a></</li>
-            </ul>
-        </li>
-        <li><a href="/news/">7. Новости</a></li>
-        <li><a href="/feedback/">8. Отзывы</a></li>
-        <li><a href="/email/">9. Обратная связь</a></li>
-    </ol>
-</div>
+<div class="container">
+    <div class="h2novostroy"><h2>Карта сайта <span>REHOUSE</span></h2></div>
+    <div class="map_website">
+        <ol type="1">
+            <li><a href="/">1. Главная</a></li>
+            <li>
+                <a>2. Продажа</a>
+                <ul>
+                    <li><a href="/sale/fla/t">- Купить квартиру</a></li>
+                    <li><a href="/sale/house/">- Купить дом</a></li>
+                    <li><a href="/sale/homestead/">- Купить участок</a></li>
+                    <li><a href="/sale/commerce/">- Купить коммерцию</a></li>
+                </ul>
+            </li>
+            <li>
+                <a>3. Аренда</a>
+                <ul>
+                    <li><a href="/rent/flat/">- Снять квартиру</a></li>
+                    <li><a href="/rent/house/">- Снять дом</a></li>
+                    <li><a href="/rent/commerce/">- Снять коммерцию</a></li>
+                    <li>@*<a href="/rent/homestead/">- Снять участок</a>*@</li>
+                </ul>
+            </li>
+            <li><a href="/newbuilding/">4. Новострои</a></li>
+            <li><a href="/manager/">5. Менеджеры</a></li>
+            <li>
+                <a>6. О нас</a>
+                <ul>
+                    <li><a href="/home/about/">- О компании</a></li>
+                    <li><a href="/vacancy/">- Вакансии агентства</a></</li>
+                </ul>
+            </li>
+            <li><a href="/news/">7. Новости</a></li>
+            <li><a href="/feedback/">8. Отзывы</a></li>
+            <li><a href="/email/">9. Обратная связь</a></li>
+        </ol>
+    </div>
