--- a/ReHouse.FrontEnd/Views/Shared/_LayoutAdverts.cshtml
+++ b/ReHouse.FrontEnd/Views/Shared/_LayoutAdverts.cshtml
@@ -316,45 +316,11 @@
         }
     </div>
 
-
-    <div class="container" id="container">
-        
-        @RenderBody()
-        @if (ViewBag.Articles != null)
-        {
-            <div class="news">
-                @foreach (Article article in ViewBag.Articles)
-                {
-                    <a href="">
-                        <div class="firstnews">
-                            <div class="content1">
-                                <div class="img">
-                                    @if (article.Images != null && article.Images.Count > 0)
-                                    {
-                                        <img src="~/Content/images/news1.jpg" title="@article.Images[0].Title" alt="@article.Images[0].Alt" width="545" height="307" />
-                                    }
-                                    else
-                                    {
-                                        <img src="~/Content/images/news1.jpg" width="440" height="263">
-                                    }
-                                </div>
-                                <div class="h4"><h4>@article.Date.ToShortDateString() в @article.Date.ToShortTimeString()</h4></div>
-                                <div class="h3"><h3>@article.Title</h3></div>
-                            </div>
-                        </div>
-                    </a>
-                }
-            </div>
-            <div class="morenews">
-                <a href="/news/" id="more">Все новости</a>
-            </div>
-        }
+    <div class="container" id="container">        
+        @RenderBody()        
+        @Html.Partial("Partial/_newsFeedbacks")
     </div>
         
-
-
-           
-
     <div class="footer">
         <div class="container" id="container">
             <div class="wrapper-footer">
