--- a/ReHouse.FrontEnd/Views/NewBuilding/Detail.cshtml
+++ b/ReHouse.FrontEnd/Views/NewBuilding/Detail.cshtml
@@ -235,44 +235,8 @@
 
     <div class="h2novostroy"><h2>Другие Новострои</h2></div>
 </span>
-<div class="othernovostroy">
+<div class="products">
     <ul class="prods" id="data-container">
-        @if (Model.OtherNewBuildings.Count > 0)
-            {
-                foreach (var item in Model.OtherNewBuildings)
-                {
-                <div class="data-item">
-                    <li>
-                        @if (item.IsExclusive)
-                        {
-                            <div class="redimg"><img src="~/Content/images/eksklusiv.png"></div>
-                        }
-                        else if (item.IsHot)
-                        {
-                            <div class="redimg"><img src="~/Content/images/redcorner.png"></div>
-                        }
-                        else if (item.IsNew)
-                        {
-                            <div class="redimg"><img src="~/Content/images/newred.png"></div>
-                        }
-                        @if (item.Images != null && item.Images.Count > 0)
-                        {
-                            <a class="fix" href="/newbuilding/detail/@item.Id"><img src="@Url.Content(item.Images[0].Url + item.Images[0].FileName)?w=250&h=212&mode=max" title="@item.Images[0].Title" alt="@item.Images[0].Alt" width="250" height="212"/></a>
-                        }
-                        else
-                        {
-                            <a href="/newbuilding/detail/@item.Id" class="fix"><img src="~/Content/images/prod1.jpg" width="250" height="212" alt="" /></a>
-                        }
-                        <div class="min-content">
-                            <div class="like" onclick="addtocart(@item.Id, '@AdvertsType.NewBuilding', true, this);"></div>
-                            <h3>@item.Name</h3>
-                            <h4>@item.Adress <br />Сдача: @item.ExpluatationDate.Name</h4>
-                            <p class="cost">от @item.Price грн/м²</p>
-                            <a href="/newbuilding/detail/@item.Id" id="follow">❯</a>
-                        </div>
-                    </li>
-                </div>
-            }
-        }
+        @Html.Partial("NewB/_listOfNewBuildings", Model.OtherNewBuildings);
     </ul>
 </div>
