--- a/ReHouse.FrontEnd/Views/Sale/Detail.cshtml
+++ b/ReHouse.FrontEnd/Views/Sale/Detail.cshtml
@@ -263,45 +263,8 @@
 <span class="none">
     <div class="h2prodsale"><h2>Новинки продаж</h2></div>
 </span>
-<div class="othernovostroy">
+<div class="products">
     <ul class="prods" id="data-container">
-        @if (Model.OtherAdverts.Count > 0)
-            {
-                foreach (var item in Model.OtherAdverts)
-                {
-                <div class="data-item">
-                    <li>
-                        @if (item.IsExclusive)
-                        {
-                            <div class="redimg"><img src="~/Content/images/eksklusiv.png"></div>
-                        }
-                        else if (item.IsHot)
-                        {
-                            <div class="redimg"><img src="~/Content/images/redcorner.png"></div>
-                        }
-                        else if (item.IsNew)
-                        {
-                            <div class="redimg"><img src="~/Content/images/newred.png"></div>
-                        }
-                        @if (item.Images != null && item.Images.Count > 0)
-                        {
-                            <a class="fix" href="/sale/detail/@item.Id"><img src="@Url.Content(item.Images[0].Url + item.Images[0].FileName)?w=250&h=212&mode=max" title="@item.Images[0].Title" alt="@item.Images[0].Alt" width="250" height="212" /></a>
-                        }
-                        else
-                        {
-                            <a href="/sale/detail/@item.Id" class="fix"><img src="~/Content/images/news1.jpg" width="250" height="212" alt="" /></a>
-                        }
-                        <div class="min-content">
-                            <div class="like" onclick="addtocart(@item.Id, '@item.Type', true, this);"></div>
-                            <h3>Продам @item.Title.RussianName.ToLower()</h3>
-                            @*<h3>@item.TitleName</h3>*@
-                            <h4>@item.Description</h4>
-                            <p class="cost">@item.Price $</p>
-                            <a href="/sale/detail/@item.Id" id="follow">❯</a>
-                        </div>
-                    </li>
-                </div>
-            }
-        }
+        @Html.Partial("Advert/_listOfAdverts", Model.OtherAdverts)
     </ul>
 </div>
