--- a/ReHouse.FrontEnd/Views/Shared/Advert/_listOfAdverts.cshtml
+++ b/ReHouse.FrontEnd/Views/Shared/Advert/_listOfAdverts.cshtml
@@ -7,21 +7,85 @@
     {
         <div class="data-item">
             <li>
-                <a href="">
-                    <div class="redimg"><img src="~/Content/images/redcorner.png"></div>
-                    <h3>Продам дом</h3>
-                    <h4><img src="~/Content/images/pin.png" height="13" alt="" /> ESrsvgs fgh fgh  fghfghfgh fdghfgh fgh dfgfh fgh fgh hgf</h4>
-                    <img class="main-img" src="~/Content/images/prod1.jpg" width="388" height="200" alt="" />
-                    <div class="meters">
-                        <div><img src="~/Content/images/m2.png" height="32" alt="" /><p>350м²</p></div>
-                        <div><img src="~/Content/images/m21.png" height="32" alt="" /><p>150м²</p></div>
-                    </div>
-                    <div class="bottom">
-                        <div><p class="cost">150000 $</p></div>
-                        <div class="share"><img src="~/Content/images/share.png" height="32" alt="" /></div>
-                        <div class="like" onclick=""><img src="~/Content/images/star.png" height="32" alt="" /></div>
-                    </div>
-                </a>
+                @if (item.Type == ReHouse.Utils.Helpers.AdvertsType.Sale)
+                {
+                    <a href="/sale/detail/@item.Id">
+                        @if (item.IsExclusive)
+                        {
+                            <div class="redimg"><img src="~/Content/images/eksklusiv.png"></div>
+                        }
+                        else if (item.IsHot)
+                        {
+                            <div class="redimg"><img src="~/Content/images/redcorner.png"></div>
+                        }
+                        else if (item.IsNew)
+                        {
+                            <div class="redimg"><img src="~/Content/images/newred.png"></div>
+                        }
+                        <h3>Продам @item.Title.RussianName.ToLower()</h3>
+                        <h4><img src="~/Content/images/pin.png" height="13" alt="" />@item.Street</h4>
+                        @if (item.Images != null && item.Images.Count > 0)
+                        {
+                            <img class="main-img" src="@Url.Content(item.Images[0].Url + item.Images[0].FileName)?w=388&h=200&mode=max" width="388" height="200" title="@item.Images[0].Title" alt="@item.Images[0].Alt" />
+                        }
+                        else
+                        {
+                            <img class="main-img" src="~/Content/images/prod1.jpg" width="388" height="200" alt="" />
+                        }
+                        <div class="meters">
+                            <div><img src="~/Content/images/m2.png" height="32" alt="" /><p>@item.AdvertPropertyValues.FirstOrDefault(x => x.AdvertPropertyId == 3).PropertiesValue м²</p></div>
+                            <div><img src="~/Content/images/m21.png" height="32" alt="" /><p>@item.AdvertPropertyValues.FirstOrDefault(x => x.AdvertPropertyId == 7).PropertiesValue м²</p></div>
+                        </div>
+                        <div class="bottom">
+                            <div><p class="cost">@item.Price $</p></div>
+                            <div class="share"><img src="~/Content/images/share.png" height="32" alt="" /></div>
+                            <div class="like" onclick="addtocart(@item.Id, '@item.Type', true, this);"><img src="~/Content/images/star.png" height="32" alt="" /></div>
+                        </div>
+                    </a>
+                }
+                else
+                {
+                    <a href="/rent/detail/@item.Id">
+                        @if (item.IsExclusive)
+                        {
+                            <div class="redimg"><img src="~/Content/images/eksklusiv.png"></div>
+                        }
+                        else if (item.IsHot)
+                        {
+                            <div class="redimg"><img src="~/Content/images/redcorner.png"></div>
+                        }
+                        else if (item.IsNew)
+                        {
+                            <div class="redimg"><img src="~/Content/images/newred.png"></div>
+                        }
+                        <h3>Сдам @item.Title.RussianName.ToLower()</h3>
+                        <h4><img src="~/Content/images/pin.png" height="13" alt="" />@item.Street</h4>
+                        @if (item.Images != null && item.Images.Count > 0)
+                        {
+                            <img class="main-img" src="@Url.Content(item.Images[0].Url + item.Images[0].FileName)?w=388&h=200&mode=max" width="388" height="200" title="@item.Images[0].Title" alt="@item.Images[0].Alt" />
+                        }
+                        else
+                        {
+                            <img class="main-img" src="~/Content/images/prod1.jpg" width="388" height="200" alt="" />
+                        }
+                        <div class="meters">
+                            <div><img src="~/Content/images/m2.png" height="32" alt="" /><p>@item.AdvertPropertyValues.FirstOrDefault(x => x.AdvertPropertyId == 3).PropertiesValue м²</p></div>
+                            <div><img src="~/Content/images/m21.png" height="32" alt="" /><p>@item.AdvertPropertyValues.FirstOrDefault(x => x.AdvertPropertyId == 7).PropertiesValue м²</p></div>
+                        </div>
+                        <div class="bottom">
+                            @if (item.RentPeriodType == ReHouse.Utils.Helpers.RentPeriodType.Daily)
+                            {
+                                <div><p class="cost">@item.Price грн</p></div>
+                            }
+                            else
+                            {
+                                <div><p class="cost">@item.Price $</p></div>
+                            }
+                            <div class="share"><img src="~/Content/images/share.png" height="32" alt="" /></div>
+                            <div class="like" onclick="addtocart(@item.Id, '@item.Type', true, this);"><img src="~/Content/images/star.png" height="32" alt="" /></div>
+                        </div>
+                    </a>
+                }
             </li>
         </div>
     }
