--- a/ReHouse.FrontEnd/Views/Home/Index.cshtml
+++ b/ReHouse.FrontEnd/Views/Home/Index.cshtml
@@ -51,6 +51,7 @@
                                 <div><p class="cost">150000 $</p></div>
                                 <div class="share"><img src="~/Content/images/share.png" height="32" alt="" /></div>
                                 <div class="like" onclick="addtocart(@item.Id, '@AdvertsType.NewBuilding', true, this);"><img src="~/Content/images/star.png" height="32" alt="" /></div>
+                                <div class="liked" onclick="addtocart(@item.Id, '@AdvertsType.NewBuilding', true, this);"><img src="~/Content/images/star-h.png" height="32" alt="" /></div>
                             </div>
                             <div class="shared_icons">
                                 <a href="" class="fb" target="_blank"></a>
