--- a/ReHouse.FrontEnd/Views/Shared/Article/_listOfArticles.cshtml
+++ b/ReHouse.FrontEnd/Views/Shared/Article/_listOfArticles.cshtml
@@ -5,42 +5,23 @@
 {
     foreach (var article in Model)
     {
-        <div class="firstnews"> 
-            <div class="content1">
-                <div class="img">
-                    @if (article.Images != null && article.Images.Count > 0)
-                    {
-                        <img src="@Url.Content(article.Images[0].Url + article.Images[0].FileName)?w=440&h=263&mode=max" title="@article.Images[0].Title" alt="@article.Images[0].Alt" width="440" height="263" />
-                    }
-                    else
-                    {
-                        <img src="~/Content/images/news1.jpg" width="440" height="263">
-                    }
+        <a href="/news/detail/@article.Id">
+            <div class="firstnews">
+                <div class="content1">
+                    <div class="img">
+                        @if (article.Images != null && article.Images.Count > 0)
+                        {
+                            <img src="@Url.Content(article.Images[0].Url + article.Images[0].FileName)?w=545&h=307&mode=max" title="@article.Images[0].Title" alt="@article.Images[0].Alt" width="545" height="307" />
+                        }
+                        else
+                        {
+                            <img src="~/Content/images/news1.jpg" width="545" height="307">
+                        }
+                    </div>
+                    <div class="h4"><h4>@article.Date.ToShortDateString() в @article.Date.ToShortTimeString()</h4></div>
+                    <div class="h3"><h3>@article.Title</h3></div>
                 </div>
-                <h3>@article.Title</h3>
-                @if (article.Description.Length > 350)
-                {
-                    <p id="news_@article.Id">@Html.Raw(article.Description.Substring(0, 349))...</p>
-                }
-                else
-                {
-                    <p>@Html.Raw(article.Description)</p>
-                }
-                @*<div class="share_icons1">
-                        <div class="share_fb">
-                            <a onclick="Share.facebook('http://rehouse-realty.com.ua/news/', '@article.Title', 'http://rehouse-realty.com.ua@(Url.Content("~/Content/images/news1.jpg"))', '@article.Description')"></a>
-                        </div>
-                        <div class="share_vk">
-                            <a onclick="Share.vkontakte('http://rehouse-realty.com.ua/news/', '@article.Title', 'http://rehouse-realty.com.ua@(Url.Content("~/Content/images/news1.jpg"))', '@article.Description')"></a>
-                        </div>
-                        <div class="share_tw">
-                            <a onclick="Share.twitter('http://rehouse-realty.com.ua/news/', '@article.Title')"></a>
-                        </div>
-                    </div>*@
-                <h4>@article.Date.ToShortDateString() в @article.Date.ToShortTimeString()</h4>
-                <a href="/news/detail/@article.Id" @*onclick="showDetails(@article.Id, this);"*@ id="more">Подробнее</a>
-                @*<p id="newsHidden_@article.Id" style="display:none">@article.Description</p>*@
             </div>
-        </div>
+        </a>
     }
 }
