--- a/ReHouse.FrontEnd/Views/Home/Index.cshtml
+++ b/ReHouse.FrontEnd/Views/Home/Index.cshtml
@@ -70,7 +70,7 @@
                                 <div class="bottom">
                                     <div><p class="cost">@item.Price $</p></div>
                                     <div class="share"><img src="~/Content/images/share.png" height="32" alt="" /></div>
-                                    <div class="like" onclick="addtocart(@item.Id, '@item.Type', true, this, event);"><img src="~/Content/images/star.png" height="32" alt="" /></div>
+                                    <div class="liked" onclick="addtocart(@item.Id, '@item.Type', true, this, event);"><img src="~/Content/images/star-h.png" height="32" alt="" /></div>
                                 </div>
                             </a>
                         }
