fix card of news

--- a/ReHouse.FrontEnd/Content/style.css
+++ b/ReHouse.FrontEnd/Content/style.css
@@ -985,7 +985,8 @@ opacity: .1;}}
 }
 
     .news .img {
-        
+        width:545px;
+        height:307px;
     }
 
     .news .firstnews, .secondnews {
